@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2681273 by drunken monkey, borisson_: Added plugin descriptions consistently
+  to the UI.
 - #2642792 by drunken monkey: Fixed and expanded the RenderedItemTest.
 - #2844527 by ayalon, drunken monkey: Added some contextual filters for Views.
 - #2847307 by JayKandari, drunken monkey: Removed "Display" suffix from our
